tdf#156161: Honor "DontEnableJava" when failed because selected JRE uninstalled

Change-Id: Id90f530fda9e565a5a53853a3acb8195035a80ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155078
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>